--- a/Inputs/Templates/SeisSol_slurm_tmpl.jinja
+++ b/Inputs/Templates/SeisSol_slurm_tmpl.jinja
@@ -1,4 +1,7 @@
 #!/bin/bash
+# This file is currently NOT USED
+# but kept here in the directory to allow single runs
+# if errors occur
 # Job Name and Files (also --job-name)
 #SBATCH -J {{job_name}}_{{job_id}}
 
