--- a/Inputs/Templates/SeisSol_slurm_JobFarm.slurm.jinja
+++ b/Inputs/Templates/SeisSol_slurm_JobFarm.slurm.jinja
@@ -7,11 +7,11 @@
 #SBATCH -e ./%j.%x.%N.err
 
 #Initial working directory:
-#SBATCH --chdir=/hppfs/work/pn49ha/di35ban/MathildeTest/
+#SBATCH --chdir=/hppfs/work/{{group}}/{{account}}/{{job_name}}/
 
 #Notification and type
 #SBATCH --mail-type=END
-#SBATCH --mail-user=christadler@geophysik.uni-muenchen.de
+#SBATCH --mail-user={{email}}
 
 # Wall clock limit:
 # 6 runs, 40 min each, 240 min = 4h
@@ -21,25 +21,18 @@
 #Setup of execution environment
 #SBATCH --export=NONE
 #--export=ALL
-#SBATCH --account=di35ban
+#SBATCH --account={{group}}
 #constraints are optional
 #--constraint="scratch&work"
-# micro partition for tests, general for production
-# --partition=micro
 #SBATCH --partition=test
 
 #Number of nodes and MPI tasks per node:
-# --nodes=48
-#SBATCH --nodes=2
+#SBATCH --nodes=16
 #SBATCH --ntasks-per-node=1
 # no longer necessary
 #module load slurm_setup
-module load gcc
-module load cmake/3.21.4
-module load python/3.8.11-extended
-module load numactl/2.0.14-intel21
+module load slurm_setup
 
-# keep this
 #SBATCH --ear=off
 
 #Run the program:
@@ -62,26 +55,14 @@ source /etc/profile.d/modules.sh
 
 echo 'num_nodes:' $SLURM_JOB_NUM_NODES 'ntasks:' $SLURM_NTASKS 'cpus_per_task:' $SLURM_CPUS_PER_TASK
 ulimit -Ss 2097152
-cd 0014/
-mpiexec -n $SLURM_NTASKS temp_seissol/SeisSol_Release_dskx_4_elastic parameters.par
-cd ../
-cd 0016/
-mpiexec -n $SLURM_NTASKS temp_seissol/SeisSol_Release_dskx_4_elastic parameters.par
-cd ../
-cd 0018/
-mpiexec -n $SLURM_NTASKS temp_seissol/SeisSol_Release_dskx_4_elastic parameters.par
-cd ..
-cd 0020/
-mpiexec -n $SLURM_NTASKS temp_seissol/SeisSol_Release_dskx_4_elastic parameters.par
-cd ..
-cd 0021/
-mpiexec -n $SLURM_NTASKS temp_seissol/SeisSol_Release_dskx_4_elastic parameters.par
-cd ..
-cd 0023/
-mpiexec -n $SLURM_NTASKS temp_seissol/SeisSol_Release_dskx_4_elastic parameters.par
-cd ..
+
+array=(  {{job_list}} )
+for i in "${array[@]}"
+do
+        echo "$i"
+        cd $i
+        mpiexec -n $SLURM_NTASKS ../seissol_bin/SeisSol_Release_dskx_4_elastic parameters.par
+        cd ..
+done
 
 
-printenv
-module list
-#wait
