--- a/Inputs/Templates/SeisSol_slurm_JobFarm.slurm.jinja
+++ b/Inputs/Templates/SeisSol_slurm_JobFarm.slurm.jinja
@@ -62,6 +62,8 @@ do
         echo "$i"
         cd $i
         mpiexec -n $SLURM_NTASKS ../seissol_bin/SeisSol_Release_dskx_4_elastic parameters.par
+        {{postprocessing_cmd1}}
+        {{postprocessing_cmd2}}
         cd ..
 done
 
