--- a/Inputs/Templates/SeisSol_slurm_tmpl.jinja
+++ b/Inputs/Templates/SeisSol_slurm_tmpl.jinja
@@ -57,7 +57,8 @@ ulimit -Ss 2097152
 
 # TODO: Copy file ../Outputs/job_name_job_id.par to the right directory
 # TODO: Or maybe better: set working_dir in the beginning to something useful
-mpiexec -n $SLURM_NTASKS temp_seissol/SeisSol_Release_dskx_4_elastic parameter_{{job_name}}_{{job_id}}.par
+mkdir -p {{tp_output_file_dir}}/{{job_id}}/
+mpiexec -n $SLURM_NTASKS temp_seissol/SeisSol_Release_dskx_4_elastic parameter.par
 
 # fill in the job information
  #python register_job_and_start_next.py {{job_id}} $SLURM_JOB_ID
