--- a/Inputs/Templates/SeisSol_slurm_JobFarm.slurm.jinja
+++ b/Inputs/Templates/SeisSol_slurm_JobFarm.slurm.jinja
@@ -59,15 +59,19 @@ ulimit -Ss 2097152
 array=(  {{job_list}} )
 for i in "${array[@]}"
 do
-        echo "$i"
+        echo "ID: $i"
         cd $i
         mkdir -p {{tp_output_file_dir}}/$i/
         mpiexec -n $SLURM_NTASKS ../seissol_bin/SeisSol_Release_dskx_4_elastic parameters.par
-        $myfile= {{tp_output_file_dir}}/$i/$i-surface.xdmf
-        /SeisSol/postprocessing/science/GroundMotionParametersMaps/ComputeGroundMotionParametersFromSurfaceOutput_Hybrid.py $myfile
-        srun python -u ~/SeisSol/postprocessing/science/GroundMotionParametersMaps/ComputeGroundMotionParametersFromSurfaceOutput_Hybrid.py $myfile --MP 48
-        {{postprocessing_cmd1}}
-        {{postprocessing_cmd2}}
+        $myfile={{tp_output_file_dir}}/$i/$i-surface.xdmf
+        echo "Myfile: $myfile"
+#        Step 1:
+         srun python -u ~/SeisSol/postprocessing/science/GroundMotionParametersMaps/ComputeGroundMotionParametersFromSurfaceOutput_Hybrid.py $myfile --MP 48
+#        Step 2:
+#        This will create a file named $filenameprefix-surface-resampled.xdmf
+         python ~/SeisSol/postprocessing/visualization/tools/extractDataFromUnstructuredOutput.py $myfile --Data u1 u2 u3 --time 90
+         {{postprocessing_cmd1}}
+         {{postprocessing_cmd2}}
         cd ..
 done
 
