--- a/Inputs/Templates/parameters.par.jinja
+++ b/Inputs/Templates/parameters.par.jinja
@@ -51,7 +51,7 @@ refinement = 0
 /
             
 &MeshNml
-MeshFile = '../mesh/mesh_topo1km_7faults_smooth_v3_smallz'             ! Name of mesh file
+MeshFile = '/hppfs/work/pn49ha/di35ban/AltoTiberina/test_1/mesh/mesh_topo1km_7faults_smooth_v3_smallz'             ! Name of mesh file
 meshgenerator = 'PUML'                         ! Name of meshgenerator (Gambit3D-fast, Netcdf or PUML)
 /
 
@@ -74,7 +74,7 @@ TimeInterval =  100.                           ! Index of printed info at time
 refinement = 0
 
 ! off-fault ascii receivers
-RFileName = '../mesh/receiver_mesh_topo1km_7_faults_smoothed_v3_smallz.txt'    ! Record Points in extra file
+RFileName = '/hppfs/work/pn49ha/di35ban/AltoTiberina/test_1/mesh/receiver_mesh_topo1km_7_faults_smoothed_v3_smallz.txt'    ! Record Points in extra file
 pickdt = 0.01                                  ! Pickpoint Sampling
 pickDtType = 1                                 ! Pickpoint Type
 ! (Optional) Synchronization point for receivers.
