--- a/Inputs/Templates/SeisSol_slurm_JobFarm.slurm.jinja
+++ b/Inputs/Templates/SeisSol_slurm_JobFarm.slurm.jinja
@@ -7,7 +7,7 @@
 #SBATCH -e ./%j.%x.%N.err
 
 #Initial working directory:
-#SBATCH --chdir=/hppfs/work/{{group}}/{{account}}/{{job_name}}/test_1
+#SBATCH --chdir=/hppfs/work/{{group}}/{{account}}/{{job_name}}/test_1/
 
 #Notification and type
 #SBATCH --mail-type=END
@@ -15,7 +15,7 @@
 
 # Wall clock limit:
 # 6 runs, 40 min each, 240 min = 4h
-#SBATCH --time=00:10:00
+#SBATCH --time=00:30:00
 #SBATCH --no-requeue
 
 #Setup of execution environment
@@ -66,12 +66,13 @@ do
         $myfile={{tp_output_file_dir}}/$i/$i-surface.xdmf
         echo "Myfile: $myfile"
 #        Step 1:
-#         srun python -u ~/SeisSol/postprocessing/science/GroundMotionParametersMaps/ComputeGroundMotionParametersFromSurfaceOutput_Hybrid.py $myfile --MP 48
+         srun python -u ~/SeisSol/postprocessing/science/GroundMotionParametersMaps/ComputeGroundMotionParametersFromSurfaceOutput_Hybrid.py $myfile --MP 48
 #        Step 2:
-#        This will create a file named $filenameprefix-surface-resampled.xdmf
+        This will create a file named $filenameprefix-surface-resampled.xdmf
          python ~/SeisSol/postprocessing/visualization/tools/extractDataFromUnstructuredOutput.py $myfile --Data u1 u2 u3 --time 90
          {{postprocessing_cmd1}}
          {{postprocessing_cmd2}}
+        rm $myfile
         cd ..
 done
 
