--- a/Inputs/Templates/SeisSol_slurm_JobFarm.slurm.jinja
+++ b/Inputs/Templates/SeisSol_slurm_JobFarm.slurm.jinja
@@ -1,41 +1,33 @@
 #!/bin/bash
 # Job Name and Files (also --job-name)
-
-#SBATCH -J MathildeTest_jobFarm
-#Output and error (also --output, --error):
+#SBATCH -J {{job_name}}_jobFarm
 #SBATCH -o ./%j.%x.%N.out
 #SBATCH -e ./%j.%x.%N.err
 
-#Initial working directory:
-#SBATCH --chdir=/hppfs/work/{{group}}/{{account}}/{{job_name}}/test_1/
-
-#Notification and type
+# Notification and type
 #SBATCH --mail-type=END
 #SBATCH --mail-user={{email}}
 
-# Wall clock limit:
-# 6 runs, 40 min each, 240 min = 4h
+# (Group) Account, (max) Wall clock and Queue:
+#SBATCH --account={{group}}
 #SBATCH --time=00:30:00
 #SBATCH --no-requeue
-
-#Setup of execution environment
-#SBATCH --export=NONE
-#--export=ALL
-#SBATCH --account={{group}}
-#constraints are optional
-#--constraint="scratch&work"
 #SBATCH --partition=test
 
-#Number of nodes and MPI tasks per node:
-#SBATCH --nodes=16
-#SBATCH --ntasks-per-node=1
-# no longer necessary
-#module load slurm_setup
-module load slurm_setup
-
+# Turn off energy aware runtime
 #SBATCH --ear=off
 
-#Run the program:
+# Setup of execution environment
+#SBATCH --export=NONE
+#Initial working directory:
+#SBATCH --chdir=/hppfs/work/{{group}}/{{account}}/{{job_name}}/test_1/
+module load slurm_setup
+
+# Number of nodes and MPI tasks per node:
+#SBATCH --nodes=16
+#SBATCH --ntasks-per-node=1
+
+# Run the program:
 export MP_SINGLE_THREAD=no
 unset KMP_AFFINITY
 export OMP_NUM_THREADS=94
@@ -63,17 +55,24 @@ do
         cd $i
         mkdir -p {{tp_output_file_dir}}/$i/
         srun -n $SLURM_NTASKS ../seissol_bin/SeisSol_Release_dskx_4_elastic parameters.par
-        $myfile={{tp_output_file_dir}}/$i/$i-surface.xdmf
+        myfile={{tp_output_file_dir}}/$i/$i-surface.xdmf
         echo "Myfile: $myfile"
+        cd {{tp_output_file_dir}}/$i/
 #        Step 1:
          srun python -u ~/SeisSol/postprocessing/science/GroundMotionParametersMaps/ComputeGroundMotionParametersFromSurfaceOutput_Hybrid.py $myfile --MP 48
 #        Step 2:
-        This will create a file named $filenameprefix-surface-resampled.xdmf
+#        This will create a file named $filenameprefix-surface-resampled.xdmf
          python ~/SeisSol/postprocessing/visualization/tools/extractDataFromUnstructuredOutput.py $myfile --Data u1 u2 u3 --time 90
          {{postprocessing_cmd1}}
          {{postprocessing_cmd2}}
         rm $myfile
+        pwd
+        echo "cd -"
+        cd -
+        pwd
+        echo "cd .."
         cd ..
+        pwd
 done
 
 
