added parameters for production runs (end_time, mesh)

--- a/Inputs/Templates/parameters.par.jinja
+++ b/Inputs/Templates/parameters.par.jinja
@@ -51,7 +51,7 @@ refinement = 0
 /
             
 &MeshNml
-MeshFile = '/hppfs/work/pn49ha/di35ban/AltoTiberina/test_1/mesh/mesh_topo1km_7_faults_smoothed_v3_smallz'            ! Name of mesh file
+MeshFile = '{{tp_params_mesh}}'                ! Name of mesh file
 meshgenerator = 'PUML'                         ! Name of meshgenerator (Gambit3D-fast, Netcdf or PUML)
 /
 
@@ -99,7 +99,7 @@ EnergyOutputInterval = 0.02
 /
 
 &AbortCriteria
-EndTime =2.0 
+EndTime ={{tp_params_endTime}}
 /
 
 &Analysis
