--- a/Inputs/Templates/SeisSol_slurm_JobFarm.slurm.jinja
+++ b/Inputs/Templates/SeisSol_slurm_JobFarm.slurm.jinja
@@ -5,7 +5,7 @@
 #SBATCH -e ./%j.%x.%N.err
 
 # Notification and type
-#SBATCH --mail-type=END
+#SBATCH --mail-type=ALL
 #SBATCH --mail-user={{email}}
 
 # (Group) Account, (max) Wall clock and Queue:
@@ -63,7 +63,7 @@ do
          srun python -u ~/SeisSol/postprocessing/science/GroundMotionParametersMaps/ComputeGroundMotionParametersFromSurfaceOutput_Hybrid.py $myfile --MP 48
 #        Step 2:
 #        This will create a file named $filenameprefix-surface-resampled.xdmf
-         python ~/SeisSol/postprocessing/visualization/tools/extractDataFromUnstructuredOutput.py $myfile --Data u1 u2 u3 --time 2
+         python ~/SeisSol/postprocessing/visualization/tools/extractDataFromUnstructuredOutput.py $myfile --Data u1 u2 u3 --time {{tp_params_endTime_int}}
          {{postprocessing_cmd1}}
          {{postprocessing_cmd2}}
         rm $myfile
