small textual updates

--- a/Inputs/Templates/SeisSol_slurm_JobFarm.slurm.jinja
+++ b/Inputs/Templates/SeisSol_slurm_JobFarm.slurm.jinja
@@ -67,7 +67,7 @@ do
 #       This will create a file named $filenameprefix-surface-resampled.xdmf
 #       python ~/SeisSol/postprocessing/visualization/tools/extractDataFromUnstructuredOutput.py $myfile --Data u1 u2 u3 --time {{tp_params_endTime_int}}
         {{postprocessing_cmd2}}
-        rm $myfile
+#        rm $myfile
         pwd
         echo "cd -"
         cd -
