Receiver File updated

--- a/Inputs/Templates/parameters.par.jinja
+++ b/Inputs/Templates/parameters.par.jinja
@@ -74,7 +74,7 @@ TimeInterval =  100.                           ! Index of printed info at time
 refinement = 0
 
 ! off-fault ascii receivers
-RFileName = '/hppfs/work/pn49ha/di35ban/AltoTiberina/test_1/mesh/receiver_mesh_topo1km_7_faults_smoothed_v3_smallz.txt'    ! Record Points in extra file
+RFileName = '{{tp_params_receiver}}'    ! Record Points in extra file
 pickdt = 0.01                                  ! Pickpoint Sampling
 pickDtType = 1                                 ! Pickpoint Type
 ! (Optional) Synchronization point for receivers.
