--- a/Inputs/Templates/parameters.par.jinja
+++ b/Inputs/Templates/parameters.par.jinja
@@ -51,7 +51,7 @@ refinement = 0
 /
             
 &MeshNml
-MeshFile = '{{tp_params_mesh}}'                ! Name of mesh file
+MeshFile = '../../mesh/{{tp_params_mesh}}'                ! Name of mesh file
 meshgenerator = 'PUML'                         ! Name of meshgenerator (Gambit3D-fast, Netcdf or PUML)
 /
 
@@ -74,7 +74,7 @@ TimeInterval =  100.                           ! Index of printed info at time
 refinement = 0
 
 ! off-fault ascii receivers
-RFileName = '{{tp_params_receiver}}'    ! Record Points in extra file
+RFileName = '../../mesh/receiver_{{tp_params_mesh}}'    ! Record Points in extra file
 pickdt = 0.01                                  ! Pickpoint Sampling
 pickDtType = 1                                 ! Pickpoint Type
 ! (Optional) Synchronization point for receivers.
